# repo-api-equipo-E

./: .gitignore  main.py  pyproject.toml
src/repo_api_equipo_e/: main.py  odoo.py
src/repo_api_equipo_e/routers/: api.py  orders.py  products.py  productsCategories.py  stock.py  suppliers.py
src/repo_api_equipo_e/routers/Odoo/: odoo.py  orders.py  products.py  productsCategories.py  stock.py  suppliers.py
src/repo_api_equipo_e/routers/Prestashop/: UpdateProductsPrestashop.py  bulkCreateFromOdoo.py  clients.py  customers.py  orderReference.py  orders.py  payments.py  prestashop.py  productDeactivate.py  productSku.py  products.py  referenceCreateFromOdoo.py  suppliers.py  updateProduct.py
